# bear-tools

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
bear/: cli.py  database.py  models.py  templates.py  writer.py
docs/: research.md
tests/: test_database.py
