[project]
name = "bear"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "questionary>=2.1.1",
    "rich>=14.3.2",
    "typer>=0.24.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.15.1",
]

[project.scripts]
bear = "bear.cli:app"

[tool.uv] 
package = true

[build-system]                                                                                                                                                                                                                                         
requires = ["hatchling"]
build-backend = "hatchling.build"     

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]                                                                                                                                                                                                                              
testpaths = ["tests"]    
addopts = "-v"
